--- a/App.config
+++ b/App.config
@@ -1,13 +1,3 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="orGenta.Properties.Settings.localCacheConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|localCache.mdb"
-            providerName="System.Data.OleDb" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
