Add Ctrl-k Shortcut
Add system hook to Ctrl-K to cycle the minimal interface

--- a/orGenta_NNv.csproj
+++ b/orGenta_NNv.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Itemsform_Actions.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="KeyCapture.cs" />
     <Compile Include="localCacheDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
