--- a/orGenta_NNv.csproj
+++ b/orGenta_NNv.csproj
@@ -100,6 +100,12 @@
     <Compile Include="ErrorDisplayDetail.Designer.cs">
       <DependentUpon>ErrorDisplayDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmKBinfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmKBinfo.Designer.cs">
+      <DependentUpon>frmKBinfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain_DBstuff.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +221,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ErrorDisplayDetail.resx">
       <DependentUpon>ErrorDisplayDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmKBinfo.resx">
+      <DependentUpon>frmKBinfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
